added style file for app

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>this is page title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
     <body>
         <h1>hii there...</h1>
+        <h2>welcome</h2>
     </body>
 </html>
